# SerraIntelligente2

./: CMakeLists.txt  README.md
include/: commandParser.h  impianto.h  impiantoAlpino.h  impiantoCarnivoro.h  impiantoDesertico.h  impiantoMediterraneo.h  impiantoTropicale.h  logger.h  orario.h  serra.h
src/: commandParser.cpp  impianto.cpp  impiantoAlpino.cpp  impiantoCarnivoro.cpp  impiantoDesertico.cpp  impiantoMediterraneo.cpp  impiantoTropicale.cpp  logger.cpp  main.cpp  orario.cpp  serra.cpp
